Fixed more alignment issues from the removal of box-sizing

--- a/app/styles/_preferences.scss
+++ b/app/styles/_preferences.scss
@@ -55,7 +55,7 @@
     position:absolute;
     left:-40px;
     top:200px;
-    width:650px;
+    width:610px;
 }
 
 #preferences .main li {
